--fix date type for mysql